--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -6,7 +6,7 @@
         <div class="div">{{t.category}}</div>
     
         <div class="d-flex ms-auto">
-            <a href="" [routerLink]="['transactions',t.id]" class="btn mt-1"><i class="fa-regular fa-eye fa-lg fa-primary"></i></a>
+            <a href="" [routerLink]="['transaction',t.id]" class="btn mt-1"><i class="fa-regular fa-eye fa-lg fa-primary"></i></a>
             <button (click)="editTransaction(t.id)" class="btn btn-link"><i class="fa-solid fa-pen-to-square fa-lg"></i></button>
             <button class="btn btn-link" (click)="destroyTransaction(t.id)"><i class="fa-solid fa-trash fa-lg"></i></button>
         </div>
